refactor[backend]: 版本号功能添加、值对象改为record类